Tweaks and tuning. Added OneAtATime strategy for deployment

--- a/src/main/resources/agent.conf
+++ b/src/main/resources/agent.conf
@@ -1,5 +1,6 @@
 basedir: /Users/dchenbecker/basetest
 notified: derek@reportgrid.com
 server_url: http://localhost:30060/
-server_key: feedfacedeadbeef
+server_key: JustaTest
 #only_stable: false
+debug: true
